frontend integration